--- a/style.css
+++ b/style.css
@@ -21,10 +21,12 @@ h1 {
     text-align: center;
     font-family: var(--title-font);
     color: var(--third);
+    font-size: 3rem;
 }
 
 h2{
     margin-left: 30px;
+    margin-top: 100px;
     font-family: var(--title-font);
     color: var(--third)
 }
@@ -46,15 +48,20 @@ ul {
 }
 .tile {
     text-align: center;
-    max-width: 200px;
-    max-height: 323px;
-    border: black solid 1px;
+    max-width: 300px;
+    border: black solid 2px;
     margin: 5px;
     background-color: var(--secondary)
 }
 
+.tile:hover {
+    filter: brightness(80%);
+    cursor: pointer;
+}
+
 .project-title {
     color: var(--third);
+    font-size: 1.25rem;
 }
 
 .project-description {
@@ -62,12 +69,14 @@ ul {
 }
 
 .thumbnail {
-    max-width: 100%;
-    max-height: 100%;
+    overflow: hidden;
+    width: 300px;
+    border-bottom: 2px black solid;
 }
 
 .tech > * {
     margin: 3px auto;
+    font-weight: 900;
 }
 
 .tech-title {
