--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --primary:#74a892;
     --secondary:  #008585;
     --third:#fbf2c4;
-    --fourth: #c7522a;
+    --fourth: #832607;
     --fifth: #e5c185;
 }
 
