--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ ul {
 
 .tech > * {
     margin: 3px auto;
-    font-weight: 900;
+    font-weight: 500;
 }
 
 .tech-title {
@@ -170,4 +170,9 @@ p.contact-info {
     align-items: center;
     text-align: center;
     position: relative
+}
+
+.blk {
+    color: black;
+    font-weight: 900;
 }
