--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@
     --title-font: "Cinzel";
     --primary-font: "Poppins";
     --primary: #263739;
-    --secondary: #2c4c64;
+    --secondary: black; 
+    /* #2c4c64; */
     --third: white;
     --fourth: #a5bdc1;
     --borders: black;
@@ -83,7 +84,7 @@ h2{
 }
 
 h3 {
-    font-family: var(--title-font);
+    font-family: var(--primary-font);
     color: var(--third);
 }
 h4 {
@@ -147,10 +148,10 @@ ul {
 }
 
 .tech-title {
-    background-color: var(--secondary);
     color: var(--third);
+    /* background-color: black;
     padding-left: 10px;
-    padding-right: 10px;
+    padding-right: 10px; */
 }
 
 p.contact-info {
