--- a/style.css
+++ b/style.css
@@ -32,11 +32,13 @@
     --title-font: "Cinzel";
     --primary-font: "Poppins";
     --primary: #263739;
-    --secondary: black; 
+    --secondary: rgb(46, 45, 45); 
     /* #2c4c64; */
     --third: white;
     --fourth: #a5bdc1;
     --borders: black;
+
+    --accent: hsl(189, 7%, 19%);
 
     /* BLACK GREEN TAN*/
     /* --title-font: "Saira";
@@ -66,6 +68,7 @@ html, body {
     padding: 0px;
     font-family:var(--primary-font);
     background-color: var(--primary);
+    /* background-image: linear-gradient(var(--primary), var(--accent)); */
     color: var(--fourth);
     text-align: center;
 }
