--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ ul {
     margin: 12px;
     /* border-radius: 10px; */
     background-color: var(--secondary);
-    box-shadow: 7px 3px 4px #3c575a;
+    box-shadow: 7px 3px 4px rgb(17, 17, 17);
 }
 
 .tile:hover {
